--- a/main/templates/compra.html
+++ b/main/templates/compra.html
@@ -27,7 +27,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
-        integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+        integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/card.css' %}">
     <link rel="stylesheet" href="{% static 'css/button.css' %}">
     <!-- fevicon -->
@@ -38,10 +39,17 @@
     <link rel="stylesheet" href="{% static 'css/jquery.mCustomScrollbar.min.css' %}">
     <!-- Tweaks for older IEs-->
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
+        media="screen">
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+    <style>
+        .dropdown-menu {
+            background-color: #666666;
+
+        }
+    </style>
 
 </head>
 
@@ -76,7 +84,29 @@
                                         <li class="active"><a href="{% url 'compra' %}">Comprar Tickets</a></li>
                                         <li><a href="{% url 'cartelera' %}">Cartelera</a></li>
                                         <li><a href="{% url 'contact' %}">Contactanos</a></li>
-                                        <li><a href="{% url 'login' %}">login</a></li>
+                                        <li class="nav-item dropdown">
+                                            {% if user.is_authenticated %}
+                                            <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown"
+                                                role="button" data-toggle="dropdown" aria-haspopup="true"
+                                                aria-expanded="false">{{user.username}}</a>
+                                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                                <a class="dropdown-item" href="#">Mi Perfil</a>
+                                                <form id="logoutForm" action="accounts/logout/" method="post">
+                                                    {% csrf_token %}
+                                                    <a class="dropdown-item"
+                                                        href="javascript:document.getElementById('logoutForm').submit()">Logout</a>
+                                                </form>
+                                            </div>
+                                            {% else %}
+                                            <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown"
+                                                role="button" data-toggle="dropdown" aria-haspopup="true"
+                                                aria-expanded="false">Perfil</a>
+                                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                                <a class="dropdown-item" href="{% url 'login'%}">Login</a>
+                                                <a class="dropdown-item" href="{% url 'signup'%}">Sign Up</a>
+                                            </div>
+                                            {% endif %}
+                                        </li>
                                         <li><a class="last_manu" href="#"><img
                                                     src="{% static 'images/search_icon.png' %}" alt="#" /></a></li>
                                     </ul>
@@ -127,7 +157,7 @@
 
                 <label for="chocolates">Chocolates (2500):</label><br>
                 <input type="number" id="chocolates" name="chocolates" value="0" min="0"><br>
-<br>
+                <br>
                 <input type="submit" value="Comprar" class="btn_compra">
                 <button type="button" class="btn_compra" id="reset-btn">Limpiar</button>
                 <div id="formMessage" class="success"></div>
