--- a/main/templates/contact.html
+++ b/main/templates/contact.html
@@ -25,6 +25,12 @@
   <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+  <style>
+    .dropdown-menu {
+      background-color: #666666;
+
+    }
+  </style>
 </head>
 <!-- body -->
 
@@ -67,8 +73,29 @@
                     <li> <a href="{% url 'cartelera' %}">Cartelera</a> </li>
                     <li class="active"> <a href="{% url 'contact' %}">Contactanos</a> </li>
 
-                    <li> <a href="{% url 'login' %}">login</a> </li>
-                    <li> <a class="last_manu" href="#"><img src="{% static 'images/search_icon.png' %}" alt="#" /></a> </li>
+                    <li class="nav-item dropdown">
+                      {% if user.is_authenticated %}
+                      <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{user.username}}</a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Mi Perfil</a>
+                        <form id="logoutForm" action="accounts/logout/" method="post">
+                          {% csrf_token %}
+                          <a class="dropdown-item"
+                            href="javascript:document.getElementById('logoutForm').submit()">Logout</a>
+                        </form>
+                      </div>
+                      {% else %}
+                      <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Perfil</a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="{% url 'login'%}">Login</a>
+                        <a class="dropdown-item" href="{% url 'signup'%}">Sign Up</a>
+                      </div>
+                      {% endif %}
+                    </li>
+                    <li> <a class="last_manu" href="#"><img src="{% static 'images/search_icon.png' %}" alt="#" /></a>
+                    </li>
 
                   </ul>
                 </nav>
@@ -192,14 +219,14 @@
     </footr>
     <!-- end footer -->
 
-         <!-- Modal -->
-         <div id="myModal" class="modal">
-          <div class="modal-content">
-            
-            <p>Te subscribiste con éxito!</p>
-            <button class="close-btn" onclick="closeModal()">Seguir viendo</button>
-          </div>
-        </div>
+    <!-- Modal -->
+    <div id="myModal" class="modal">
+      <div class="modal-content">
+
+        <p>Te subscribiste con éxito!</p>
+        <button class="close-btn" onclick="closeModal()">Seguir viendo</button>
+      </div>
+    </div>
 
     <!-- Javascript files-->
     <script src="{% static 'js/jquery.min.js' %}"></script>
