--- a/main/templates/sign_up.html
+++ b/main/templates/sign_up.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,13 +14,21 @@
   <meta name="author" content="">
   <link rel="stylesheet" href="{% static 'css/modal.css' %}">
   <link rel="stylesheet" href="{% static 'css/sign in.css' %}">
+  <link rel="stylesheet" href="{% static 'css/sign up.css' %}">
   <link rel="icon" href="{% static 'images/fevicon.png' %}" type="image/gif" />
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
-  <link rel="stylesheet" href="{% static 'css/responsive.css' %}">  
+  <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
   <link rel="stylesheet" href="{% static 'css/jquery.mCustomScrollbar.min.css' %}">
   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
+    media="screen">
+  <style>
+    .dropdown-menu {
+      background-color: #666666;
+
+    }
+  </style>
 
 </head>
 <!-- body -->
@@ -34,214 +43,245 @@
   <header>
     <!-- header inner -->
 
-      <div class="header">
-        <div class="container">
-          <div class="row">
-            <div class="col-xl-2 col-lg-2 col-md-2 col-sm-3 col logo_section">
-              <div class="full">
-                <div class="center-desk">
-                  <div class="logo">
-                    <img src="{% static 'images/Logo Cinema.jpeg' %}" alt="#" />
-                  </div>
+    <div class="header">
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-2 col-lg-2 col-md-2 col-sm-3 col logo_section">
+            <div class="full">
+              <div class="center-desk">
+                <div class="logo">
+                  <img src="{% static 'images/Logo Cinema.jpeg' %}" alt="#" />
                 </div>
               </div>
             </div>
-            <div class="col-xl-10 col-lg-10 col-md-10 col-sm-9">
-              
-               <div class="menu-area">
-                <div class="limit-box">
-                  <nav class="main-menu ">
-                    <ul class="menu-area-main">
-                      <li> <a href="{% url 'index' %}">Home</a> </li>
-                   
-                      <li> <a href="{% url 'about' %}">About</a> </li>
-                      <li><a href="{% url 'compra' %}">Comprar Tickets</a></li>
-                      <li> <a href="{% url 'cartelera' %}">Cartelera</a> </li>
-                      <li> <a href="{% url 'contact' %}">Contactanos</a> </li>
-      
-                        <li class="active"> <a   href="{% url 'login' %}">Login</a> </li>
-                      <li  > <a  class="last_manu" href="#"><img src="{% static 'images/search_icon.png' %}" alt="#" /></a> </li>
-                      
-                     </ul>
-                   </nav>
-                
-               </div> 
-             </div>
-           </div>
-         </div>
-       </div>
-     </div>
-     <!-- end header inner -->
+          </div>
+          <div class="col-xl-10 col-lg-10 col-md-10 col-sm-9">
 
-     <!-- end header -->
-   
-</header>
+            <div class="menu-area">
+              <div class="limit-box">
+                <nav class="main-menu ">
+                  <ul class="menu-area-main">
+                    <li> <a href="{% url 'index' %}">Home</a> </li>
 
-<div class="backgro_mh">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="heding">
-           <h2>Sign up</h2>
+                    <li> <a href="{% url 'about' %}">About</a> </li>
+                    <li><a href="{% url 'compra' %}">Comprar Tickets</a></li>
+                    <li> <a href="{% url 'cartelera' %}">Cartelera</a> </li>
+                    <li> <a href="{% url 'contact' %}">Contactanos</a> </li>
+
+                    <li class="nav-item dropdown">
+                      {% if user.is_authenticated %}
+                      <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{user.username}}</a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Mi Perfil</a>
+                        <form id="logoutForm" action="accounts/logout/" method="post">
+                          {% csrf_token %}
+                          <a class="dropdown-item"
+                            href="javascript:document.getElementById('logoutForm').submit()">Logout</a>
+                        </form>
+                      </div>
+                      {% else %}
+                      <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Perfil</a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="{% url 'login'%}">Login</a>
+                        <a class="dropdown-item" href="{% url 'signup'%}">Sign Up</a>
+                      </div>
+                      {% endif %}
+                    </li>
+                    <li> <a class="last_manu" href="#"><img src="{% static 'images/search_icon.png' %}" alt="#" /></a>
+                    </li>
+
+                  </ul>
+                </nav>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end header inner -->
+
+    <!-- end header -->
+
+  </header>
+
+  <div class="backgro_mh">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="heding">
+            <h2>Sign up</h2>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
-<!-- Sign Up  -->
+  <!-- Sign Up  -->
 
-<div class="container" style="text-align: center;">
+  <div class="container">
+    {% if mensaje %}
+    <div class="alert alert-primary" role="alert" id="idMensaje">
+
+      {{mensaje}}
+
+    </div>
+    {%endif%}
     <div class="heading_login">Sign Up</div>
-    <form action="" class="form_login" onsubmit="return validateForm()">
-      <input required="" class="input" type="text" name="nombre" id="nombre" placeholder="Nombre">
-      <input required="" class="input" type="email" name="email" id="email" placeholder="E-mail">
-      <input required minlength="5" maxlength="200" class="input" type="password" name="password" id="password" placeholder="Password">
+    <form action="" class="form_login" method="post">
+      {% csrf_token%}
+      <div class="form-group">
+        <label for="nombre">Username</label>
+        <input placeholder="Username" type="text" class="input" id="nombre" name="nombre" aria-describedby="emailHelp" required="">
+      </div>
+      <div class="form-group">
+        <label for="email">Email address</label>
+        <input placeholder="Enter email" id="email"  name="email" type="email" class="input"  aria-describedby="emailHelp" required="">
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="input" id="password" name="password" placeholder="Password" required="">
+      </div>
       <input class="login-button" type="submit" value="Sign Up">
     </form>
     <p class="signup-link">
-        Ya tienes una cuenta?
-        <a href="{% url 'login' %}">Sign In</a>
-      </p>
+      Ya tienes una cuenta?
+      <a href="{% url 'login' %}">Sign In</a>
+    </p>
     <span class="agreement"><a href="#">Learn user licence agreement</a></span>
-</div>
-  
+  </div>
+ 
   <script>
-    function validateForm() {
-      var form = document.querySelector(".form_login");
-      var email = form.querySelector("#email").value;
-      var password = form.querySelector("#password").value;
-  
-      if (!email || !password) {
-        alert("Por favor, complete todos los campos antes de enviar.");
-        return false;
-      } else {
-        alert("Te has registrado exitosamente!");
-        return true;
-      }
-    }
+    $(document).ready(function(){
+      $("#idMensaje").delay(2000).fadeOut("slow");
+    })
   </script>
   
-        
 
-      
-<!-- End Sign Up -->
+  <!-- End Sign Up -->
 
 
 
 
 
 
-    <!--  footer -->
-    <footr>
-      <div class="footer ">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12">
-              <form id="contactForm" class="contact_bg" onsubmit="return validateForm()">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="col-md-12">
-                            <input class="contactus" placeholder="Nombre" type="text" name="Your Name" required minlength="6" maxlength="40">
-                        </div>
-                        <div class="col-md-12">
-                            <input class="contactus" placeholder="Email" type="email" name="Your Email" required>
-                        </div>
-                        <div class="col-md-12">
-                            <input class="contactus" placeholder="Telefono" type="text" name="Your Phone" pattern="[0-9]{9}" title="Ingrese un número de teléfono válido (9 dígitos)" required>
-                        </div>
-                        <div class="col-md-12">
-                            <textarea class="textarea" placeholder="Mensaje" type="text" name="Message" required minlength="5" maxlength="200" title="favor ingresa tu mensaje"></textarea>
-                        </div>
-                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                            <button class="send" type="submit">Enviar</button>
-                        </div>
-                    </div>
-                </div>
-            </form>
-            
-            <script>
-                function validateForm() {
-                    var form = document.getElementById("contactForm");
-                    var inputs = form.querySelectorAll("input, textarea");
-            
-                    for (var i = 0; i < inputs.length; i++) {
-                        if (!inputs[i].value) {
-                            alert("Por favor, complete todos los campos antes de enviar.");
-                            return false;
-                        }
-                    }
-            
-                    alert("Su solicitud de contacto ha sido enviada");
-                    return true;
-                }
-            </script>
-            
-
-            </div>
-            <div class="col-md-12 border_top">
-              <form class="news">
-                <h3>Subscribete para más información y cupones</h3>
-                <input class="newslatter" placeholder="ENTER YOUR MAIL" type="email" name="ENTER YOUR MAIL" required>
-                <button class="submit" type="button" onclick="showModal()">Subscribete</button>
-              </form>
-            </div>
-            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 ">
+  <!--  footer -->
+  <footr>
+    <div class="footer ">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <form id="contactForm" class="contact_bg" onsubmit="return validateForm()">
               <div class="row">
-                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 ">
-                  <div class="address">
-                    <ul class="loca">
-                      <li>
-                        <a href="#"><img src="{% static 'icon/loc.png' %}" alt="#" /></a>Ubicaciones
-                   
-                        <li>
-                          
-                            <a href="#"><img src="{% static 'icon/call.png' %}" alt="#" /></a>(+56) 9 1234 5678 </li>
-                          <li>
-                            <a href="#"><img src="{% static 'icon/email.png' %}" alt="#" /></a>example@gmail.com </li>
-                          </ul>
-                         
-
-                        </div>
-                      </div>
-                       <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 ">
-                           <ul class="social_link">
-                            <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                          </ul>
-                       </div>
-                    </div>
+                <div class="col-md-12">
+                  <div class="col-md-12">
+                    <input class="contactus" placeholder="Nombre" type="text" name="Your Name" required minlength="6"
+                      maxlength="40">
                   </div>
+                  <div class="col-md-12">
+                    <input class="contactus" placeholder="Email" type="email" name="Your Email" required>
+                  </div>
+                  <div class="col-md-12">
+                    <input class="contactus" placeholder="Telefono" type="text" name="Your Phone" pattern="[0-9]{9}"
+                      title="Ingrese un número de teléfono válido (9 dígitos)" required>
+                  </div>
+                  <div class="col-md-12">
+                    <textarea class="textarea" placeholder="Mensaje" type="text" name="Message" required minlength="5"
+                      maxlength="200" title="favor ingresa tu mensaje"></textarea>
+                  </div>
+                  <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                    <button class="send" type="submit">Enviar</button>
+                  </div>
+                </div>
+              </div>
+            </form>
+
+            <script>
+              function validateForm() {
+                var form = document.getElementById("contactForm");
+                var inputs = form.querySelectorAll("input, textarea");
+
+                for (var i = 0; i < inputs.length; i++) {
+                  if (!inputs[i].value) {
+                    alert("Por favor, complete todos los campos antes de enviar.");
+                    return false;
+                  }
+                }
+
+                alert("Su solicitud de contacto ha sido enviada");
+                return true;
+              }
+            </script>
+
+
+          </div>
+          <div class="col-md-12 border_top">
+            <form class="news">
+              <h3>Subscribete para más información y cupones</h3>
+              <input class="newslatter" placeholder="ENTER YOUR MAIL" type="email" name="ENTER YOUR MAIL" required>
+              <button class="submit" type="button" onclick="showModal()">Subscribete</button>
+            </form>
+          </div>
+          <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 ">
+            <div class="row">
+              <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 ">
+                <div class="address">
+                  <ul class="loca">
+                    <li>
+                      <a href="#"><img src="{% static 'icon/loc.png' %}" alt="#" /></a>Ubicaciones
+
+                    <li>
+
+                      <a href="#"><img src="{% static 'icon/call.png' %}" alt="#" /></a>(+56) 9 1234 5678
+                    </li>
+                    <li>
+                      <a href="#"><img src="{% static 'icon/email.png' %}" alt="#" /></a>example@gmail.com
+                    </li>
+                  </ul>
+
 
                 </div>
-
+              </div>
+              <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 ">
+                <ul class="social_link">
+                  <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                  <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                  <li><a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                  <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                </ul>
               </div>
             </div>
-          </footr>
-          <!-- end footer -->
+          </div>
 
-             <!-- Modal -->
-    <div id="myModal" class="modal">
-      <div class="modal-content">
-        
-        <p>Te subscribiste con éxito!</p>
-        <button class="close-btn" onclick="closeModal()">Seguir viendo</button>
+        </div>
+
       </div>
     </div>
+  </footr>
+  <!-- end footer -->
 
-          <!-- Javascript files-->
-          <script src="{% static 'js/jquery.min.js' %}"></script>
-          <script src="{% static 'js/popper.min.js' %}"></script>
-          <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-          <script src="{% static 'js/jquery-3.0.0.min.js' %}"></script>
-          <script src="{% static 's/plugin.js' %}"></script>
-          <!-- sidebar -->
-          <script src="{% static 'js/jquery.mCustomScrollbar.concat.min.js' %}"></script>
-          <script src="{% static 'js/custom.js' %}"></script>
-          <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
-          <script src="{% static 'js/modal.js' %}"></script>
+  <!-- Modal -->
+  <div id="myModal" class="modal">
+    <div class="modal-content">
+
+      <p>Te subscribiste con éxito!</p>
+      <button class="close-btn" onclick="closeModal()">Seguir viendo</button>
+    </div>
+  </div>
+
+  <!-- Javascript files-->
+  <script src="{% static 'js/jquery.min.js' %}"></script>
+  <script src="{% static 'js/popper.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+  <script src="{% static 'js/jquery-3.0.0.min.js' %}"></script>
+  <script src="{% static 's/plugin.js' %}"></script>
+  <!-- sidebar -->
+  <script src="{% static 'js/jquery.mCustomScrollbar.concat.min.js' %}"></script>
+  <script src="{% static 'js/custom.js' %}"></script>
+  <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+  <script src="{% static 'js/modal.js' %}"></script>
 
 
 
