--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -11,44 +11,18 @@
   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
   <!-- site metas -->
   <title>Satiros</title>
+  <link rel="stylesheet" href="{% static 'css/sign in.css' %}">
   <meta name="keywords" content="">
   <meta name="description" content="">
   <meta name="author" content="">
   <link rel="stylesheet" href="{% static 'css/modal.css' %}">
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"
-    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
-    integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
-    crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="{% static 'css/card.css' %}">
-  <link rel="stylesheet" href="{% static 'css/button.css' %}">
-  <!-- fevicon -->
-  <link rel="icon" href="{% static 'images/fevicon.png' %}" type="image/gif" />
-  <!-- bootstrap css -->
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-  <!-- style css -->
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
-  <!-- Responsive-->
   <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
-  <!-- Scrollbar Custom CSS -->
-  <link rel="stylesheet" href="{% static 'css/jquery.mCustomScrollbar.min.css' %}">
-  <!-- Tweaks for older IEs-->
-  <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
-    media="screen">
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-  <style>
-    .dropdown-menu {
-      background-color: #666666;
-
-    }
-  </style>
+  <script src="{% static 'js/jquery.min.js' %}"></script>
+  <script src="{% static 'js/popper.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 </head>
-<!-- body -->
 
 <body class="main-layout contineer_page">
   <!-- loader  -->
@@ -56,73 +30,6 @@
     <div class="loader"><img src="{% static 'images/loading.gif' %}" alt="#" /></div>
   </div>
   <!-- end loader -->
-
-  <!-- API IMDB -->
-  <script src="assets/js/jquery.min.js"></script>
-
-  <script>
-    const settings = {
-      async: true,
-      crossDomain: true,
-      url: 'https://imdb-top-100-movies.p.rapidapi.com/',
-      method: 'GET',
-      headers: {
-        'X-RapidAPI-Key': '438284335fmsha89fe88b67e67c3p1b738fjsn5bf0b3d02de6',
-        'X-RapidAPI-Host': 'imdb-top-100-movies.p.rapidapi.com'
-      }
-    };
-
-    let peliculas = [];
-
-    $.ajax(settings).done(function (response) {
-      peliculas = response; // Asigna la respuesta completa al array peliculas
-      mostrarPeliculas(peliculas); // Muestra todas las películas por defecto
-    });
-
-    function mostrarPeliculas(peliculasFiltradas) {
-      $("#cine").empty(); // Limpia el contenedor antes de mostrar las películas
-      $.each(peliculasFiltradas, function (i, item) {
-        $("#cine").append(`
-      <div class="col-md-4">
-        <div class="card">
-          <img src="${item.image}" alt="${item.title} Poster"/>
-          <div class="content">
-            <p class="title">${item.title}</p>
-            <a href="${item.imdb_link}" target="_blank">
-              <button class="button">Ver en IMDB</button>
-            </a>
-          </div>
-        </div>
-      </div>
-    `);
-      });
-    }
-
-    function filtrarPeliculasPorNombre(nombre) {
-      if (!nombre) {
-        return peliculas; // Si el nombre está vacío, devuelve todas las películas
-      }
-      const inicial = nombre.toLowerCase();
-      return peliculas.filter(pelicula => pelicula.title.toLowerCase().startsWith(inicial));
-    }
-
-    $(document).ready(function () {
-      $('#buscarNombre').on('input', function () {
-        const nombreBuscado = $(this).val();
-        const peliculasFiltradas = filtrarPeliculasPorNombre(nombreBuscado);
-        mostrarPeliculas(peliculasFiltradas);
-      });
-
-      $('.letra-filtro').on('click', function () {
-        const letra = $(this).text();
-        const peliculasFiltradas = filtrarPeliculasPorNombre(letra);
-        mostrarPeliculas(peliculasFiltradas);
-      });
-    });
-  </script>
-  <!-- END API IMDB -->
-
-
   <!-- header -->
   <header>
     <!-- header inner -->
@@ -133,7 +40,7 @@
             <div class="full">
               <div class="center-desk">
                 <div class="logo">
-                  <a href="index.html"><img src="{% static 'images/Logo Cinema.jpeg' %}" alt="#" /></a>
+                  <img src="{% static 'images/Logo Cinema.jpeg' %}" alt="#" />
                 </div>
               </div>
             </div>
@@ -141,13 +48,13 @@
           <div class="col-xl-10 col-lg-10 col-md-10 col-sm-9">
             <div class="menu-area">
               <div class="limit-box">
-                <nav class="main-menu ">
+                <nav class="main-menu">
                   <ul class="menu-area-main">
-                    <li> <a href="{% url 'index' %}">Home</a> </li>
-                    <li> <a href="{% url 'about' %}">About</a> </li>
+                    <li><a href="{% url 'index' %}">Home</a></li>
+                    <li><a href="{% url 'about' %}">About</a></li>
                     <li><a href="{% url 'compra' %}">Comprar Tickets</a></li>
-                    <li class="active"> <a href="{% url 'cartelera' %}">Cartelera</a> </li>
-                    <li> <a href="{% url 'contact' %}">Contactanos</a> </li>
+                    <li><a href="{% url 'cartelera' %}">Cartelera</a></li>
+                    <li><a href="{% url 'contact' %}">Contactanos</a></li>
                     <li class="nav-item dropdown">
                       {% if user.is_authenticated %}
                       <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
@@ -169,7 +76,7 @@
                       </div>
                       {% endif %}
                     </li>
-                    <li> <a class="last_manu" href="#"><img src="{% static 'images/search_icon.png' %}" alt="#" /></a>
+                    <li><a class="last_manu" href="#"><img src="{% static 'images/search_icon.png' %}" alt="#" /></a>
                     </li>
                   </ul>
                 </nav>
@@ -180,68 +87,77 @@
       </div>
     </div>
     <!-- end header inner -->
-    <!-- end header -->
   </header>
+
 
   <div class="backgro_mh">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
           <div class="heding">
-            <h2>Cartelera</h2>
+            <h2>Login</h2>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <br>
 
+  <!-- Login  -->
   <div class="container">
-    <br>
-    <div class="row">
-      <div class="col-md-12">
-        <label for="buscarNombre">Buscar por inicial:</label <input id="buscarNombre" type="text"
-          placeholder="Buscar por nombre o inicial">
-        <button class="letra-filtro btn btn-secondary">A</button>
-        <button class="letra-filtro btn btn-secondary">B</button>
-        <button class="letra-filtro btn btn-secondary">C</button>
-        <button class="letra-filtro btn btn-secondary">D</button>
-        <button class="letra-filtro btn btn-secondary">E</button>
-        <button class="letra-filtro btn btn-secondary">F</button>
-        <button class="letra-filtro btn btn-secondary">G</button>
-        <button class="letra-filtro btn btn-secondary">H</button>
-        <button class="letra-filtro btn btn-secondary">I</button>
-        <button class="letra-filtro btn btn-secondary">J</button>
-        <button class="letra-filtro btn btn-secondary">K</button>
-        <button class="letra-filtro btn btn-secondary">L</button>
-        <button class="letra-filtro btn btn-secondary">M</button>
-        <button class="letra-filtro btn btn-secondary">N</button>
-        <button class="letra-filtro btn btn-secondary">Ñ</button>
-        <button class="letra-filtro btn btn-secondary">O</button>
-        <button class="letra-filtro btn btn-secondary">P</button>
-        <button class="letra-filtro btn btn-secondary">Q</button>
-        <button class="letra-filtro btn btn-secondary">R</button>
-        <button class="letra-filtro btn btn-secondary">S</button>
-        <button class="letra-filtro btn btn-secondary">T</button>
-        <button class="letra-filtro btn btn-secondary">U</button>
-        <button class="letra-filtro btn btn-secondary">V</button>
-        <button class="letra-filtro btn btn-secondary">W</button>
-        <button class="letra-filtro btn btn-secondary">X</button>
-        <button class="letra-filtro btn btn-secondary">Y</button>
-        <button class="letra-filtro btn btn-secondary">Z</button>
-        <br>
-        <!-- Añade más botones para otras letras según sea necesario -->
+    {% if mensaje %}
+    <div class="alert alert-primary" role="alert" id="idMensaje">
 
-        <div class="row" id="cine">
-          <!-- Aquí se mostrarán las películas -->
-        </div>
-      </div>
+      {{mensaje}}
+
     </div>
-    <br>
+    {%endif%}
+    <div class="heading_login">Sign In</div>
+    <form class="form_login" method="post">
+      {% csrf_token %}
+      <input placeholder="Username" id="username" name="username" type="text" class="input" required="" />
+      <input placeholder="Password" id="password" name="password" type="password" class="input" required="" />
+      <span class="forgot-password"><a href="#">Forgot Password ?</a></span>
+      <input class="login-button" type="submit" value="Sign In">
+    </form>
   </div>
-  <!-- end Gallery -->
 
-  <!--  footer -->
+  <!-- social media buttons -->
+  <div class="social-account-container">
+    <span class="title">Or Sign in with</span>
+    <div class="social-accounts">
+      <button class="social-button google">
+        <svg class="svg" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 488 512">
+          <path
+            d="M488 261.8C488 403.3 391.1 504 248 504 110.8 504 0 393.2 0 256S110.8 8 248 8c66.8 0 123 24.5 166.3 64.9l-67.5 64.9C258.5 52.6 94.3 116.6 94.3 256c0 86.5 69.1 156.6 153.7 156.6 98.2 0 135-70.4 140.8-106.9H248v-85.3h236.1c2.3 12.7 3.9 24.9 3.9 41.4z">
+          </path>
+        </svg></button>
+      <button class="social-button apple">
+        <svg class="svg" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512">
+          <path
+            d="M318.7 268.7c-.2-36.7 16.4-64.4 50-84.8-18.8-26.9-47.2-41.7-84.7-44.6-35.5-2.8-74.3 20.7-88.5 20.7-15 0-49.4-19.7-76.4-19.7C63.3 141.2 4 184.8 4 273.5q0 39.3 14.4 81.2c12.8 36.7 59 126.7 107.2 125.2 25.2-.6 43-17.9 75.8-17.9 31.8 0 48.3 17.9 76.4 17.9 48.6-.7 90.4-82.5 102.6-119.3-65.2-30.7-61.7-90-61.7-91.9zm-56.6-164.2c27.3-32.4 24.8-61.9 24-72.5-24.1 1.4-52 16.4-67.9 34.9-17.5 19.8-27.8 44.3-25.6 71.9 26.1 2 49.9-11.4 69.5-34.3z">
+          </path>
+        </svg>
+      </button>
+      <button class="social-button twitter">
+        <svg class="svg" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
+          <path
+            d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z">
+          </path>
+        </svg>
+      </button>
+    </div>
+  </div>
+  <br>
+  <p class="signup-link">
+    No account?
+    <a href="{% url 'signup' %}">Sign up</a>
+  </p>
+  </div>
+  </div>
+
+
+
+  <!-- footer -->
   <footr>
     <div class="footer ">
       <div class="container">
@@ -271,6 +187,7 @@
                 </div>
               </div>
             </form>
+
             <script>
               function validateForm() {
                 var form = document.getElementById("contactForm");
@@ -287,6 +204,8 @@
                 return true;
               }
             </script>
+
+
           </div>
           <div class="col-md-12 border_top">
             <form class="news">
@@ -302,14 +221,17 @@
                   <ul class="loca">
                     <li>
                       <a href="#"><img src="{% static 'icon/loc.png' %}" alt="#" /></a>Ubicaciones
-                    </li>
+
                     <li>
+
                       <a href="#"><img src="{% static 'icon/call.png' %}" alt="#" /></a>(+56) 9 1234 5678
                     </li>
                     <li>
                       <a href="#"><img src="{% static 'icon/email.png' %}" alt="#" /></a>example@gmail.com
                     </li>
                   </ul>
+
+
                 </div>
               </div>
               <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 ">
@@ -322,11 +244,14 @@
               </div>
             </div>
           </div>
+
         </div>
+
       </div>
     </div>
   </footr>
   <!-- end footer -->
+
 
 
   <!-- Modal -->
@@ -347,8 +272,15 @@
   <!-- sidebar -->
   <script src="{% static 'js/jquery.mCustomScrollbar.concat.min.js' %}"></script>
   <script src="{% static 'js/custom.js' %}"></script>
-  <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="{% static 'js/modal.js' %}"></script>
+  <script>
+    $(document).ready(function () {
+      $("#idMensaje").delay(2000).fadeOut("slow");
+    })
+  </script>
 
 </body>
 
