--- a/main/templates/compra.html
+++ b/main/templates/compra.html
@@ -7,34 +7,22 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- mobile metas -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
     <title>Satiros</title>
-    <link rel="stylesheet" href="{% static 'css/sign in.css' %}">
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="stylesheet" href="{% static 'css/modal.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'css/compra.css' %}">
-    <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/popper.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
-        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
-        integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{% static 'css/card.css' %}">
-    <link rel="stylesheet" href="{% static 'css/button.css' %}">
     <!-- fevicon -->
     <link rel="icon" href="{% static 'images/fevicon.png' %}" type="image/gif" />
     <!-- bootstrap css -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <!-- style css -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <!-- Responsive-->
+    <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/jquery.mCustomScrollbar.min.css' %}">
     <!-- Tweaks for older IEs-->
@@ -42,15 +30,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
         media="screen">
     <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
     <style>
         .dropdown-menu {
             background-color: #666666;
 
         }
     </style>
-
 </head>
 
 <body class="main-layout contineer_page">
@@ -77,13 +64,14 @@
                     <div class="col-xl-10 col-lg-10 col-md-10 col-sm-9">
                         <div class="menu-area">
                             <div class="limit-box">
-                                <nav class="main-menu">
+                                <nav class="main-menu ">
                                     <ul class="menu-area-main">
-                                        <li><a href="{% url 'index' %}">Home</a></li>
-                                        <li><a href="{% url 'about' %}">About</a></li>
+                                        <li> <a href="{% url 'index' %}">Home</a> </li>
+                                        <li> <a href="{% url 'about' %}">About</a> </li>
                                         <li class="active"><a href="{% url 'compra' %}">Comprar Tickets</a></li>
-                                        <li><a href="{% url 'cartelera' %}">Cartelera</a></li>
-                                        <li><a href="{% url 'contact' %}">Contactanos</a></li>
+                                        <li> <a href="{% url 'cartelera' %}">Cartelera</a> </li>
+                                        <li> <a href="{% url 'contact' %}">Contactanos</a> </li>
+                                        <li> <a href="{% url 'carrito' %}">Carrito</a> </li>
                                         <li class="nav-item dropdown">
                                             {% if user.is_authenticated %}
                                             <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown"
@@ -107,8 +95,7 @@
                                             </div>
                                             {% endif %}
                                         </li>
-                                        <li><a class="last_manu" href="#"><img
-                                                    src="{% static 'images/search_icon.png' %}" alt="#" /></a></li>
+
                                     </ul>
                                 </nav>
                             </div>
@@ -147,16 +134,6 @@
                 <label for="quantity">Cantidad de Tickets:</label><br>
                 <input type="number" id="quantity" name="quantity" min="1"><br>
                 <span id="quantityError" class="error"></span><br>
-
-                <h3>Carrito de Compras:</h3>
-                <label for="popcorn">Palomitas (5800):</label><br>
-                <input type="number" id="popcorn" name="popcorn" value="0" min="0"><br>
-
-                <label for="drink">Bebida (5800):</label><br>
-                <input type="number" id="drink" name="drink" value="0" min="0"><br>
-
-                <label for="chocolates">Chocolates (2500):</label><br>
-                <input type="number" id="chocolates" name="chocolates" value="0" min="0"><br>
                 <br>
                 <input type="submit" value="Comprar" class="btn_compra">
                 <button type="button" class="btn_compra" id="reset-btn">Limpiar</button>
@@ -164,6 +141,74 @@
             </form>
         </div>
     </div>
+<br>
+    <!-- Productos para Carrito -->
+    {% if messages %}
+    <ul class="messages">
+      {% for message in messages %}
+      <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <div class="card text-center" style="width: 18rem; background-color: rgb(160, 209, 221);">
+                    <div class="card-body">
+                        <img src="{% static 'images/palomitas.jpg' %}" alt="" style="width: 168px; height: 300px;">
+                        <h5 class="card-title">Palomitas</h5>
+                        <button method="POST" onclick="agregarAlCarrito('palomitas')">Agregar al Carrito</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm">
+                <div class="card text-center" style="width: 18rem; background-color: rgb(160, 209, 221);">
+                    <div class="card-body">
+                        <img src="{% static 'images/nacho_queso.jpg' %}" alt="" style="width: 168px; height: 300px;">
+                        <h5 class="card-title">Nachos Con Queso</h5>
+                        <button method="POST" onclick="agregarAlCarrito('nachos_con_queso')">Agregar al Carrito</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm">
+                <div class="card text-center" style="width: 18rem; background-color: rgb(160, 209, 221);">
+                    <div class="card-body">
+                        <img src="{% static 'images/misfavoritos.jfif' %}" alt="" style="width: 168px; height: 300px;">
+                        <h5 class="card-title">Snickers</h5>
+                        <button method="POST" onclick="agregarAlCarrito('snickers')">Agregar al Carrito</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Productos para Carrito -->
+
+    <!-- Script carrito -->
+    <script>
+        function agregarAlCarrito(producto) {
+            fetch('/agregar-al-carrito/', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'X-CSRFToken': '{{ csrf_token }}'
+                },
+                body: JSON.stringify({ producto: producto })
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    alert(producto + ' ha sido agregado al carrito.');
+                } else {
+                    alert('Error al agregar el producto al carrito.');
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                alert('Ocurrió un error al agregar el producto al carrito.');
+            });
+        }
+    </script>
+    <!-- END Script carrito -->
 
     <script>
         document.addEventListener("DOMContentLoaded", () => {
