--- a/main/templates/contact.html
+++ b/main/templates/contact.html
@@ -50,62 +50,59 @@
 
     <div class="header">
       <div class="container">
-        <div class="row">
-          <div class="col-xl-2 col-lg-2 col-md-2 col-sm-3 col logo_section">
-            <div class="full">
-              <div class="center-desk">
-                <div class="logo">
-                  <img src="{% static 'images/Logo Cinema.jpeg' %}" alt="#" />
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-xl-10 col-lg-10 col-md-10 col-sm-9">
-
-            <div class="menu-area">
-              <div class="limit-box">
-                <nav class="main-menu ">
-                  <ul class="menu-area-main">
-                    <li> <a href="{% url 'index' %}">Home</a> </li>
-
-                    <li> <a href="{% url 'about' %}">About</a> </li>
-                    <li><a href="{% url 'compra' %}">Comprar Tickets</a></li>
-                    <li> <a href="{% url 'cartelera' %}">Cartelera</a> </li>
-                    <li class="active"> <a href="{% url 'contact' %}">Contactanos</a> </li>
-
-                    <li class="nav-item dropdown">
-                      {% if user.is_authenticated %}
-                      <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{user.username}}</a>
-                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Mi Perfil</a>
-                        <form id="logoutForm" action="accounts/logout/" method="post">
-                          {% csrf_token %}
-                          <a class="dropdown-item"
-                            href="javascript:document.getElementById('logoutForm').submit()">Logout</a>
-                        </form>
+          <div class="row">
+              <div class="col-xl-2 col-lg-2 col-md-2 col-sm-3 col logo_section">
+                  <div class="full">
+                      <div class="center-desk">
+                          <div class="logo">
+                              <img src="{% static 'images/Logo Cinema.jpeg' %}" alt="#" />
+                          </div>
                       </div>
-                      {% else %}
-                      <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Perfil</a>
-                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="{% url 'login'%}">Login</a>
-                        <a class="dropdown-item" href="{% url 'signup'%}">Sign Up</a>
-                      </div>
-                      {% endif %}
-                    </li>
-                    <li> <a class="last_manu" href="#"><img src="{% static 'images/search_icon.png' %}" alt="#" /></a>
-                    </li>
-
-                  </ul>
-                </nav>
-
+                  </div>
               </div>
-            </div>
+              <div class="col-xl-10 col-lg-10 col-md-10 col-sm-9">
+                  <div class="menu-area">
+                      <div class="limit-box">
+                          <nav class="main-menu ">
+                              <ul class="menu-area-main">
+                                  <li> <a href="{% url 'index' %}">Home</a> </li>
+                                  <li> <a href="{% url 'about' %}">About</a> </li>
+                                  <li> <a href="{% url 'compra' %}">Comprar Tickets</a></li>
+                                  <li> <a href="{% url 'cartelera' %}">Cartelera</a> </li>
+                                  <li class="active"> <a href="{% url 'contact' %}">Contactanos</a> </li>
+                                  <li> <a href="{% url 'carrito' %}">Carrito</a> </li>
+                                  <li class="nav-item dropdown">
+                                      {% if user.is_authenticated %}
+                                      <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown"
+                                          role="button" data-toggle="dropdown" aria-haspopup="true"
+                                          aria-expanded="false">{{user.username}}</a>
+                                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                          <a class="dropdown-item" href="#">Mi Perfil</a>
+                                          <form id="logoutForm" action="accounts/logout/" method="post">
+                                              {% csrf_token %}
+                                              <a class="dropdown-item"
+                                                  href="javascript:document.getElementById('logoutForm').submit()">Logout</a>
+                                          </form>
+                                      </div>
+                                      {% else %}
+                                      <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown"
+                                          role="button" data-toggle="dropdown" aria-haspopup="true"
+                                          aria-expanded="false">Perfil</a>
+                                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                          <a class="dropdown-item" href="{% url 'login'%}">Login</a>
+                                          <a class="dropdown-item" href="{% url 'signup'%}">Sign Up</a>
+                                      </div>
+                                      {% endif %}
+                                  </li>
+
+                              </ul>
+                          </nav>
+                      </div>
+                  </div>
+              </div>
           </div>
-        </div>
       </div>
-    </div>
+  </div>
 
     <div class="backgro_mh">
       <div class="container">
